Fix alignment of code comment button

--- a/app/assets/stylesheets/pages/diff.scss
+++ b/app/assets/stylesheets/pages/diff.scss
@@ -16,6 +16,7 @@
 
     svg {
       vertical-align: middle;
+      top: -1px;
     }
   }
 
